[package]
name = "iec_syntax"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Parser/lexer frontend for an IEC 61131-3 compiler."
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
regex = "1.1.2"
lalrpop-util = "0.16.3"
codespan = "0.2.1"

[build-dependencies]
lalrpop = "0.16.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
