[package]
name = "iec_syntax"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Parser/lexer frontend for an IEC 61131-3 compiler."
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
regex = "1"
lalrpop-util = "0.16"
codespan = { version = "0.2.1", features = ["serialization", "memory_usage"] }
serde = "1.0"
serde_derive = "1.0"
sum_type = "0.1.1"
heapsize_derive = "0.1.4"
heapsize = "0.4.2"

[build-dependencies]
lalrpop = "0.16"

[dev-dependencies]
pretty_assertions = "0.6.1"
serde_json = "1.0"
structopt = "0.2.15"
